--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.14.1",
-    "pino-http": "^10.4.0"
+    "pino-http": "^10.4.0",
+    "randombytes": "^2.1.0"
   }
 }
