--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "pino-http": "^10.4.0",
     "randombytes": "^2.1.0"
