--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs",
     "lint": "eslint src/**/*.js",
     "start": "node ./src/index.js",
     "dev": "nodemon src/index.js"
@@ -22,6 +25,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@redocly/cli": "^1.34.3",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
@@ -43,6 +47,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "pino-http": "^10.4.0",
-    "randombytes": "^2.1.0"
+    "randombytes": "^2.1.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
